add project page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,9 +6,7 @@
     </head>
     <body>
     {{> header}}
-        <p>Some text here</p>
-        <a href="/">home</a>
-        <a href="/main">main</a>
+        <p>about page text</p>
     </body>
 {{> footer}}
 </html>
