--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Home</title>
+        <title>Some Websiteee</title>
     </head>
     <body>
     {{> header}}
-        <p>home page text</p>
+        <p>project page text</p>
     </body>
 {{> footer}}
 </html>
